# minecraft_world_trimmer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  fixes.md  notes.txt
src/: cli.rs  main.rs
src/commands/: mod.rs  optimize_result.rs  palette.rs  read.rs  write.rs
src/nbt/: binary_reader.rs  parse.rs  tag.rs  writers.rs
src/nbt/parsers/: parse_compound_tag.rs  parse_list_tag.rs  parse_with_type.rs
src/region_loader/: get_u32.rs  region.rs
src/region_loader/chunk_loader/: chunk.rs  compression_scheme.rs
src/world/: get_region_files.rs  validate.rs
