[package]
name = "minecraft_world_trimmer"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
indicatif = "0.17"
rayon = "1.10"
thiserror = "2.0.3"
csv = "1.3.1"
crab_nbt = "0.2.6"
