[package]
name = "minecraft_world_trimmer"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
indicatif = "0.18"
rayon = "1.11"
thiserror = "2.0.17"
lz4_flex = "0.11.5"
num_cpus = "1.17"