[package]
name = "minecraft_world_trimmer"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-ng"] }
indicatif = "0.18.4"
rayon = "1.12.0"
thiserror = "2.0.18"
lz4_flex = "0.13.1"